zerocopy-derive/tests/ui-nightly/struct.nightly.stderr
error[E0463]: can't find crate for `zerocopy_derive` which `zerocopy` depends on
  --> $DIR/struct.rs:10:1
   |
10 | extern crate zerocopy_renamed;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error[E0433]: failed to resolve: could not find `pointer` in `imp`
   --> $DIR/../include.rs:138:13
    |
138 |             pointer::{cast::CastSized, BecauseImmutable},
    |             ^^^^^^^ could not find `pointer` in `imp`

error[E0432]: unresolved imports `super::imp::Ptr`, `super::imp::ReadOnly`
   --> $DIR/../include.rs:111:39
    |
111 |         use super::imp::{MaybeUninit, Ptr, ReadOnly};
    |                                       ^^^  ^^^^^^^^ no `ReadOnly` in `util::imp`
    |                                       |
    |                                       no `Ptr` in `util::imp`
    |                                       help: a similar name exists in the module: `str`

error[E0432]: unresolved imports `super::imp::pointer`, `super::imp::ReadOnly`
   --> $DIR/../include.rs:138:13
    |
138 |             pointer::{cast::CastSized, BecauseImmutable},
    |             ^^^^^^^ could not find `pointer` in `imp`
139 |             ReadOnly,
    |             ^^^^^^^^ no `ReadOnly` in `util::imp`

error[E0433]: failed to resolve: could not find `KnownLayout` in `imp`
  --> $DIR/../include.rs:55:21
   |
55 |         super::imp::KnownLayout,
   |                     ^^^^^^^^^^^ could not find `KnownLayout` in `imp`

error[E0433]: failed to resolve: could not find `Immutable` in `imp`
  --> $DIR/../include.rs:56:21
   |
56 |         super::imp::Immutable,
   |                     ^^^^^^^^^ could not find `Immutable` in `imp`

error[E0433]: failed to resolve: could not find `FromBytes` in `imp`
  --> $DIR/../include.rs:57:21
   |
57 |         super::imp::FromBytes,
   |                     ^^^^^^^^^ could not find `FromBytes` in `imp`

error[E0433]: failed to resolve: could not find `IntoBytes` in `imp`
  --> $DIR/../include.rs:58:21
   |
58 |         super::imp::IntoBytes,
   |                     ^^^^^^^^^ could not find `IntoBytes` in `imp`

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/../include.rs:62:7
   |
62 |     #[zerocopy(crate = "zerocopy_renamed")]
   |       ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
64 +     #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
65 |     pub struct AU16(pub u16);
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:32:3
   |
32 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
33 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
34 | struct KL00(u8, NotKnownLayoutDst);
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:38:3
   |
38 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
39 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
40 | struct KL02(u8, [u8]);
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:44:3
   |
44 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
46 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
47 | struct KL08(u8, NotKnownLayoutDst);
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:51:3
   |
51 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
53 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
54 | struct KL09(NotKnownLayout, NotKnownLayout);
   |

error: cannot find derive macro `Immutable` in this scope
  --> $DIR/struct.rs:59:10
   |
59 | #[derive(Immutable)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::Immutable;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:60:3
   |
60 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
61 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
62 | struct Immutable1 {
   |

error: cannot find derive macro `Immutable` in this scope
  --> $DIR/struct.rs:65:10
   |
65 | #[derive(Immutable)]
   |          ^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::Immutable;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:66:3
   |
66 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
67 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
68 | struct Immutable2 {
   |

error: cannot find derive macro `TryFromBytes` in this scope
  --> $DIR/struct.rs:75:10
   |
75 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::TryFromBytes;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:76:3
   |
76 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
78 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
79 | struct TryFromBytesPacked {
   |

error: cannot find derive macro `TryFromBytes` in this scope
  --> $DIR/struct.rs:82:10
   |
82 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::TryFromBytes;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:83:3
   |
83 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
85 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
86 | struct TryFromBytesPackedN {
   |

error: cannot find derive macro `TryFromBytes` in this scope
  --> $DIR/struct.rs:89:10
   |
89 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::TryFromBytes;
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/struct.rs:90:3
   |
90 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
92 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
93 | struct TryFromBytesCPacked {
   |

error: cannot find derive macro `TryFromBytes` in this scope
  --> $DIR/struct.rs:96:10
   |
96 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
help: consider importing this derive macro
   |
15 + use zerocopy_derive::TryFromBytes;
   |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:97:3
    |
 97 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
 99 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
100 | struct TryFromBytesCPackedN {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:111:3
    |
111 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
113 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
114 | struct IntoBytes1<T> {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:119:3
    |
119 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
121 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
122 | struct IntoBytes2 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:127:3
    |
127 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
129 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
130 | struct IntoBytes3 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:144:3
    |
144 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
146 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
147 | struct IntoBytes4 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:154:3
    |
154 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
156 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
157 | struct IntoBytes5 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:164:3
    |
164 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
166 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
167 | struct IntoBytes6 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:175:3
    |
175 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
177 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
178 | struct IntoBytes7 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:184:3
    |
184 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
186 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
187 | struct IntoBytes8 {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:191:3
    |
191 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
192 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
193 | struct IntoBytes9<T> {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:197:3
    |
197 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
199 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
200 | struct IntoBytes10<T> {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:205:3
    |
205 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
207 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
208 | struct IntoBytes11<T> {
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:222:3
    |
222 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
224 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
225 | struct IntoBytes12<T> {
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:232:10
    |
232 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:233:3
    |
233 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
235 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
236 | struct Unaligned1;
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:237:10
    |
237 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:238:3
    |
238 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
240 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
241 | struct Unaligned2 {
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:244:10
    |
244 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:245:3
    |
245 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
247 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
248 | struct Unaligned3;
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:249:10
    |
249 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:250:3
    |
250 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
252 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
253 | struct Unaligned4;
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:254:10
    |
254 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:255:3
    |
255 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
257 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
258 | struct Unaligned5;
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:259:10
    |
259 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:260:3
    |
260 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
261 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
262 | struct Unaligned6;
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:263:10
    |
263 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:264:3
    |
264 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
266 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
267 | struct Unaligned7;
    |

error: cannot find derive macro `Unaligned` in this scope
   --> $DIR/struct.rs:273:10
    |
273 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::Unaligned;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:274:3
    |
274 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
276 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
277 | struct WeirdReprSpan;
    |

error: cannot find derive macro `SplitAt` in this scope
   --> $DIR/struct.rs:278:10
    |
278 | #[derive(SplitAt)]
    |          ^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::SplitAt;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:279:3
    |
279 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
281 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
282 | struct SplitAtNotKnownLayout([u8]);
    |

error: cannot find derive macro `SplitAt` in this scope
   --> $DIR/struct.rs:283:10
    |
283 | #[derive(SplitAt, KnownLayout)]
    |          ^^^^^^^
    |
help: consider importing this derive macro
    |
 15 + use zerocopy_derive::SplitAt;
    |

error: cannot find attribute `zerocopy` in this scope
   --> $DIR/struct.rs:284:3
    |
284 | #[zerocopy(crate = "zerocopy_renamed")]
    |   ^^^^^^^^
    |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
    |
286 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
287 | struct SplitAtSized(u8);
    |

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:110:53
    |
110 |     pub fn test_trivial_is_bit_valid<T: super::imp::TryFromBytes>() {
    |                                                     ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:130:35
    |
130 |         assert!(<T as super::imp::TryFromBytes>::is_bit_valid(ptr));
    |                                   ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:133:45
    |
133 |     pub fn test_is_bit_valid<T: super::imp::TryFromBytes, V: super::imp::IntoBytes>(
    |                                             ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `IntoBytes` in module `super::imp`
   --> $DIR/../include.rs:133:74
    |
133 |     pub fn test_is_bit_valid<T: super::imp::TryFromBytes, V: super::imp::IntoBytes>(
    |                                                                          ^^^^^^^^^ not found in `super::imp`

error[E0692]: transparent struct cannot have other repr hints
   --> $DIR/struct.rs:239:8
    |
239 | #[repr(transparent, align(2))]
    |        ^^^^^^^^^^^  ^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/struct.rs:78:1
   |
78 | struct TryFromBytesPacked {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> $DIR/../include.rs:64:5
   |
64 |     pub struct AU16(pub u16);
   |     ^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/struct.rs:85:1
   |
85 | struct TryFromBytesPackedN {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> $DIR/../include.rs:64:5
   |
64 |     pub struct AU16(pub u16);
   |     ^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/struct.rs:92:1
   |
92 | struct TryFromBytesCPacked {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> $DIR/../include.rs:64:5
   |
64 |     pub struct AU16(pub u16);
   |     ^^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `#[repr(align)]` type
  --> $DIR/struct.rs:99:1
   |
99 | struct TryFromBytesCPackedN {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: `AU16` has a `#[repr(align)]` attribute
  --> $DIR/../include.rs:64:5
   |
64 |     pub struct AU16(pub u16);
   |     ^^^^^^^^^^^^^^^

error[E0587]: type has conflicting packed and align representation hints
   --> $DIR/struct.rs:247:1
    |
247 | struct Unaligned3;
    | ^^^^^^^^^^^^^^^^^

error: aborting due to 67 previous errors

Some errors have detailed explanations: E0405, E0432, E0433, E0463, E0587, E0588, E0692.
For more information about an error, try `rustc --explain E0405`.
